welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
var rep = 0
if( die1 != die2 )
{
	rep = die1 + die2
	return rep
}
else if( ( die1 == die2 ) & ( noDoubles == true ))
{
	if(die1 == 6)
	{
		rep = 7
		return rep
	}
	rep = die1 + die2 + 1
	return rep
}
}
